--- a/index.css
+++ b/index.css
@@ -143,7 +143,7 @@ input[type=checkbox] {
 }
 
 .img {
-  background: url('./assets/bg.gif')no-repeat;
+  background: url('https://i.yourimageshare.com/0590IsWUU3.gif')no-repeat;
   width: 100%;
 
   height: 100vh;
